# fortnite-telegram-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: cli_parser.py  main.py  old.py
src/db/: db.py  init.sql
src/handlers/: constants.py  help_handler.py  rank_handler.py  start_handler.py
src/models/: player.py
units/: fortnite-telegram-bot.service  fortnite-telegram-bot.timer
